--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,6 +5,7 @@
   "askm": "ASKM",
   "whether": "Whether you're on the go or in the",
   "comfort": "comfort of your own space",
-  "continueWithGoogle": "Continue with Google",
-  "continueWithEmail": "Continue with email"
+  "continue_with_google": "Continue with Google",
+  "continue_with_email": "Continue with email",
+  "whether_you_re_on_the_go_or_in_the_comfort_of_your_own_space": "Whether you're on the go or in the comfort of your own space"
 }
