--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,5 +13,15 @@
   "password": "Password",
   "alreadyHaveAnAccount": "Already have an account?",
   "signIn": "Sign in",
-  "createAccount": "Create account"
+  "createAccount": "Create account",
+  "askAnything" : "Ask anything",
+  "write": "Write",
+  "aPlanHowToLearnTrading": "a plan how to learn trading",
+  "tellMe": "Tell me",
+  "howToCareHomePlantMonstera": "how to care home plant monstera",
+  "helpMePick": "Help me pick",
+  "aBirthdayGiftForMyMom": "a birthday gift for my mom",
+  "recommendADish": "Recommend a dish",
+  "forRomanticDinner": "for romantic dinner",
+  "answer": "Answer"
 }
